added: user timeline search func

--- a/src/Search/search.css
+++ b/src/Search/search.css
@@ -95,6 +95,7 @@
   border: none;
   width: 60px;
   cursor: pointer;
+  flex: 0 0 60px;
   transition: background-color .3s ease;
 }
 .submit:hover, .submit:active{
